gen/parser/AutomateSimParser.java
// Generated from /Users/Admin/Desktop/courses/2023w2/cpsc410/project1/src/parser/AutomateSimParser.g4 by ANTLR 4.13.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AutomateSimParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, INHERITS=2, ENUM=3, STRING=4, NUMBER=5, ROOM=6, OF=7, ACTION=8, 
		ON=9, SET=10, TO=11, IF=12, IS=13, FOR=14, IN=15, COMMA=16, DOT=17, DECL_START=18, 
		DECL_END=19, LIST_START=20, LIST_END=21, ARG_START=22, ARG_END=23, WS=24, 
		NUM=25, STR=26, VAR=27;
	public static final int
		RULE_program = 0, RULE_decl = 1, RULE_type = 2, RULE_property = 3, RULE_enum = 4, 
		RULE_string = 5, RULE_number = 6, RULE_arg = 7, RULE_room = 8, RULE_device = 9, 
		RULE_device_prop = 10, RULE_statement = 11, RULE_action = 12, RULE_if = 13, 
		RULE_for = 14, RULE_set = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decl", "type", "property", "enum", "string", "number", "arg", 
			"room", "device", "device_prop", "statement", "action", "if", "for", 
			"set"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'inherits'", "'enum'", "'string'", "'number'", "'room'", 
			"'of'", "'action'", "'on'", "'set'", "'to'", "'if'", "'is'", "'for'", 
			"'in'", "','", "'.'", "'{'", "'}'", "'['", "']'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "INHERITS", "ENUM", "STRING", "NUMBER", "ROOM", "OF", "ACTION", 
			"ON", "SET", "TO", "IF", "IS", "FOR", "IN", "COMMA", "DOT", "DECL_START", 
			"DECL_END", "LIST_START", "LIST_END", "ARG_START", "ARG_END", "WS", "NUM", 
			"STR", "VAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutomateSimParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutomateSimParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AutomateSimParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32);
				decl();
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 322L) != 0) );
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public RoomContext room() {
			return getRuleContext(RoomContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(42);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				type();
				}
				break;
			case ROOM:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				room();
				}
				break;
			case ACTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				action();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(AutomateSimParser.TYPE, 0); }
		public List<TerminalNode> VAR() { return getTokens(AutomateSimParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(AutomateSimParser.VAR, i);
		}
		public TerminalNode DECL_START() { return getToken(AutomateSimParser.DECL_START, 0); }
		public TerminalNode DECL_END() { return getToken(AutomateSimParser.DECL_END, 0); }
		public TerminalNode INHERITS() { return getToken(AutomateSimParser.INHERITS, 0); }
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(TYPE);
			setState(45);
			match(VAR);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(46);
				match(INHERITS);
				setState(47);
				match(VAR);
				}
			}

			setState(50);
			match(DECL_START);
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(51);
				property();
				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 56L) != 0) );
			setState(56);
			match(DECL_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyContext extends ParserRuleContext {
		public EnumContext enum_() {
			return getRuleContext(EnumContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_property);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				enum_();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				string();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				number();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(AutomateSimParser.ENUM, 0); }
		public List<TerminalNode> VAR() { return getTokens(AutomateSimParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(AutomateSimParser.VAR, i);
		}
		public TerminalNode LIST_START() { return getToken(AutomateSimParser.LIST_START, 0); }
		public TerminalNode LIST_END() { return getToken(AutomateSimParser.LIST_END, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AutomateSimParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AutomateSimParser.COMMA, i);
		}
		public EnumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterEnum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitEnum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitEnum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumContext enum_() throws RecognitionException {
		EnumContext _localctx = new EnumContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(ENUM);
			setState(64);
			match(VAR);
			setState(65);
			match(LIST_START);
			setState(66);
			match(VAR);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(67);
				match(COMMA);
				setState(68);
				match(VAR);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(LIST_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(AutomateSimParser.STRING, 0); }
		public TerminalNode VAR() { return getToken(AutomateSimParser.VAR, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(STRING);
			setState(77);
			match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AutomateSimParser.NUMBER, 0); }
		public TerminalNode VAR() { return getToken(AutomateSimParser.VAR, 0); }
		public TerminalNode LIST_START() { return getToken(AutomateSimParser.LIST_START, 0); }
		public List<TerminalNode> NUM() { return getTokens(AutomateSimParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(AutomateSimParser.NUM, i);
		}
		public TerminalNode COMMA() { return getToken(AutomateSimParser.COMMA, 0); }
		public TerminalNode LIST_END() { return getToken(AutomateSimParser.LIST_END, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_number);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(NUMBER);
			setState(80);
			match(VAR);
			setState(81);
			match(LIST_START);
			setState(82);
			match(NUM);
			setState(83);
			match(COMMA);
			setState(84);
			match(NUM);
			setState(85);
			match(LIST_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(AutomateSimParser.VAR, 0); }
		public TerminalNode NUM() { return getToken(AutomateSimParser.NUM, 0); }
		public TerminalNode STR() { return getToken(AutomateSimParser.STR, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 234881024L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RoomContext extends ParserRuleContext {
		public TerminalNode ROOM() { return getToken(AutomateSimParser.ROOM, 0); }
		public TerminalNode VAR() { return getToken(AutomateSimParser.VAR, 0); }
		public TerminalNode DECL_START() { return getToken(AutomateSimParser.DECL_START, 0); }
		public TerminalNode DECL_END() { return getToken(AutomateSimParser.DECL_END, 0); }
		public List<DeviceContext> device() {
			return getRuleContexts(DeviceContext.class);
		}
		public DeviceContext device(int i) {
			return getRuleContext(DeviceContext.class,i);
		}
		public RoomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_room; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterRoom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitRoom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitRoom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoomContext room() throws RecognitionException {
		RoomContext _localctx = new RoomContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_room);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(ROOM);
			setState(90);
			match(VAR);
			setState(91);
			match(DECL_START);
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				device();
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VAR );
			setState(97);
			match(DECL_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeviceContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(AutomateSimParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(AutomateSimParser.VAR, i);
		}
		public TerminalNode OF() { return getToken(AutomateSimParser.OF, 0); }
		public TerminalNode ARG_START() { return getToken(AutomateSimParser.ARG_START, 0); }
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public TerminalNode ARG_END() { return getToken(AutomateSimParser.ARG_END, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AutomateSimParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AutomateSimParser.COMMA, i);
		}
		public DeviceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_device; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterDevice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitDevice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitDevice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeviceContext device() throws RecognitionException {
		DeviceContext _localctx = new DeviceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_device);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(VAR);
			setState(100);
			match(OF);
			setState(101);
			match(VAR);
			setState(102);
			match(ARG_START);
			setState(103);
			arg();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				arg();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(ARG_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Device_propContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(AutomateSimParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(AutomateSimParser.VAR, i);
		}
		public TerminalNode DOT() { return getToken(AutomateSimParser.DOT, 0); }
		public Device_propContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_device_prop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterDevice_prop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitDevice_prop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitDevice_prop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Device_propContext device_prop() throws RecognitionException {
		Device_propContext _localctx = new Device_propContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_device_prop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(VAR);
			setState(114);
			match(DOT);
			setState(115);
			match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				if_();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				for_();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				set();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionContext extends ParserRuleContext {
		public TerminalNode ACTION() { return getToken(AutomateSimParser.ACTION, 0); }
		public TerminalNode VAR() { return getToken(AutomateSimParser.VAR, 0); }
		public TerminalNode ON() { return getToken(AutomateSimParser.ON, 0); }
		public TerminalNode DECL_START() { return getToken(AutomateSimParser.DECL_START, 0); }
		public TerminalNode DECL_END() { return getToken(AutomateSimParser.DECL_END, 0); }
		public List<Device_propContext> device_prop() {
			return getRuleContexts(Device_propContext.class);
		}
		public Device_propContext device_prop(int i) {
			return getRuleContext(Device_propContext.class,i);
		}
		public TerminalNode LIST_START() { return getToken(AutomateSimParser.LIST_START, 0); }
		public TerminalNode LIST_END() { return getToken(AutomateSimParser.LIST_END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AutomateSimParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AutomateSimParser.COMMA, i);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomateSimParserListener ) ((AutomateSimParserListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomateSimParserVisitor ) return ((AutomateSimParserVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(ACTION);
			setState(123);
			match(VAR);
			setState(124);
			match(ON);
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				{
				setState(125);
				device_prop();
				}
				break;
			case LIST_START:
				{
				setState(126);
				match(LIST_START);
				setState(127);
				device_prop();
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(128);
					match(COMMA);
					setState(129);
					device_prop();
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(135);
				match(LIST_END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(139);
			match(DECL_START);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21504L) != 0)) {
				{
				{
				setState(140);
				statement();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(DECL_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
